<resources>
    <string name="app_name">Happy Shop</string>
    <string name="on_sale">ON SALE</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="permission_needed">User have to give network state permission.</string>

    <!--Home-->
    <string name="categories">Categories</string>

    <string name="makeup">Makeup</string>
    <string name="skin_care">Skin Care</string>
    <string name="hair">Hair</string>
    <string name="tools_brushes">Toools &amp; Brushes</string>
    <string name="favourite">Favourite</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="wishlist">Wishlist</string>

    <string name="item_added">Item Added</string>
    <string name="error_to_retrive">Error to get data from database</string>
    <string name="server_side_error">Failed to get response to server</string>
    <string name="already_add">Product already added</string>
    <string name="noItem">No item available</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="removed">Removed</string>
    <string name="error_while_removing">Error While Removing</string>

</resources>
